# notebook-lm-automation

./: .gitignore  global-cli-commands.md  pyproject.toml
src/notebooklm_automation/: __init__.py  audio.py  auth.py  config.py  converter.py  discovery.py  export.py  geminihelp.md  logger_setup.py  main.py  models.py  notebooklmhtml.md  packt_claim.py  packt_pipeline.py  pdf_discovery.py  pdf_splitter.py  reports.py  split_and_clean.py
tests/: test_audio.py  test_converter.py  test_discovery.py  test_logger_setup.py  test_main.py  test_reports.py
